// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`unitInput > renders click 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_medium__gwf0fl3 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_o_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_q_"
            aria-describedby="_r_q_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_q_"
                aria-expanded="true"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_dropdownVisible_true__1ba7knd8 selectBar_size_medium__1ba7kndb selectBar_state_neutral__1ba7knde selectBar_undefined_compound_0__1ba7kndg"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__1ba7knd3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="dropdown__5kpm8k1 styles__w40vpo4"
              id="_r_q_"
              role="dialog"
              style="--ozfz3c0: -5px; --ozfz3c1: 0px; --ozfz3c2: rotate(180deg); --ozfz3c4: translate3d(0px, 4px, 0); --ozfz3c5: 0ms; --ozfz3c6: translate3d(0px, 4px, 0); --ozfz3c7: 100%; --_5kpm8k0: 100%; opacity: 1;"
            >
              <div
                class="styles__w40vpo2"
              >
                <div
                  class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <div
                    class="dropdown__5kpm8k2 dropdown__5kpm8k3 styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
                    id="select-dropdown"
                    role="listbox"
                  >
                    <div
                      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.125rem_xxsmall__toi52u5j styles_justifyContent_normal_xxsmall__toi52u5v"
                      id="items"
                    >
                      <div
                        aria-disabled="false"
                        aria-label="kb"
                        aria-selected="false"
                        class="dropdown__5kpm8k8 dropdown__5kpm8k7"
                        data-testid="option-kb"
                        id="option-0"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                          data-testid="option-stack-kb"
                        >
                          <div
                            class="dropdown__5kpm8kh styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_space-between_xxsmall__toi52u77"
                          >
                            <span
                              class="dropdown__5kpm8kg style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_72__m4c9ow3c"
                              style="--qabug40: left;"
                            >
                              KB
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="mb"
                        aria-selected="false"
                        class="dropdown__5kpm8k8 dropdown__5kpm8k7"
                        data-testid="option-mb"
                        id="option-1"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                          data-testid="option-stack-mb"
                        >
                          <div
                            class="dropdown__5kpm8kh styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_space-between_xxsmall__toi52u77"
                          >
                            <span
                              class="dropdown__5kpm8kg style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_72__m4c9ow3c"
                              style="--qabug40: left;"
                            >
                              MB
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        aria-disabled="false"
                        aria-label="gb"
                        aria-selected="false"
                        class="dropdown__5kpm8k8 dropdown__5kpm8k7"
                        data-testid="option-gb"
                        id="option-2"
                        role="option"
                        tabindex="0"
                      >
                        <div
                          class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
                          data-testid="option-stack-gb"
                        >
                          <div
                            class="dropdown__5kpm8kh styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_space-between_xxsmall__toi52u77"
                          >
                            <span
                              class="dropdown__5kpm8kg style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_72__m4c9ow3c"
                              style="--qabug40: left;"
                            >
                              GB
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with default props 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_large__gwf0flc styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_0_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_2_"
            aria-describedby="_r_2_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_2_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with default value 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          for="_r_3n_"
        />
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_72__m4c9ow3c"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_3n_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
            value="1"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_3r_"
            aria-describedby="_r_3r_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_3r_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7kndm style__m4c9ow0 style_disabled_true__m4c9ow2 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_60__m4c9ow30"
                >
                  KB
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_true__vbm0wq2 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_2__vbm0wqm"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with disabled and placeHolder 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_1a_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_1c_"
            aria-describedby="_r_1c_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_1c_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow2 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_63__m4c9ow33"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_true__vbm0wq2 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_2__vbm0wqm"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with dropdownAlign center 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_large__gwf0flc styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_1g_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_1i_"
            aria-describedby="_r_1i_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_1i_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with error  and success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_large__gwf0flc styles_error__gwf0fl8 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="true"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_24_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_danger__vbm0wqb styles_size_small__vbm0wqg styles_undefined_compound_36__vbm0wq1k"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_26_"
            aria-describedby="_r_26_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_26_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with error 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_large__gwf0flc styles_error__gwf0fl8 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="true"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_1t_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_danger__vbm0wqb styles_size_small__vbm0wqg styles_undefined_compound_36__vbm0wq1k"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_1v_"
            aria-describedby="_r_1v_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_1v_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_danger__m4c9owc style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_8__m4c9ow1k style_undefined_compound_72__m4c9ow3c"
      >
        error
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          for="_r_37_"
        >
          label
        </label>
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_72__m4c9ow3c"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_37_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_3b_"
            aria-describedby="_r_3b_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_3b_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow2 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_63__m4c9ow33"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_true__vbm0wq2 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_2__vbm0wqm"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with label and no label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <label
        class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
        for="_r_30_"
      >
        label
      </label>
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_30_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_33_"
            aria-describedby="_r_33_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_33_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow2 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_63__m4c9ow33"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_true__vbm0wq2 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_2__vbm0wqm"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with min max 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_large__gwf0flc styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_6_"
            max="100"
            min="10"
            name="-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_8_"
            aria-describedby="_r_8_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_8_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input--unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with no label and label information 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
      >
        <label
          class="styles_htmlFor__17td3g92 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodyStrong__m4c9ows style_undefined_compound_24__m4c9ow20 style_undefined_compound_72__m4c9ow3c"
          for="_r_3f_"
        />
        <span
          class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_72__m4c9ow3c"
        >
          label information
        </span>
      </div>
      <div
        class="styles_large__gwf0flc styles_disabled__gwf0fl7 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            disabled=""
            id="_r_3f_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_3j_"
            aria-describedby="_r_3j_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_3j_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_disabled_true__1ba7knd7 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="true"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_true__m4c9ow2 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_63__m4c9ow33"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_true__vbm0wq2 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_2__vbm0wqm"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size large 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_large__gwf0flc styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_14_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_16_"
            aria-describedby="_r_16_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_16_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size medioum 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_medium__gwf0fld styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_medium__gwf0fl3 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_i_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_k_"
            aria-describedby="_r_k_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_k_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_medium__1ba7kndb selectBar_state_neutral__1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__1ba7knd3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with size small 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_small__gwf0fle styles_default__gwf0fl6 styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_small__gwf0fl4 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_c_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="0"
            step="1"
            type="number"
          />
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_e_"
            aria-describedby="_r_e_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_e_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_small__1ba7kndc selectBar_state_neutral__1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_bodySmall__m4c9owp style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_small__1ba7knd3 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`unitInput > renders with success 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
    >
      <div
        class="styles_large__gwf0flc styles_success__gwf0fla styles__gwf0fl5 styles__x6hyh50"
        style="--_3mg8xe0: 1fr auto; --_3mg8xe1: 1fr auto; --_3mg8xe2: 1fr auto; --_3mg8xe3: 1fr auto; --_3mg8xe4: 1fr auto; --_3mg8xe5: 1fr auto;"
      >
        <div
          class="styles__gwf0flb"
          id="input-field"
        >
          <input
            aria-invalid="false"
            class="styles_large__gwf0fl2 styles__gwf0fl1"
            data-testid="unit-input"
            id="_r_1m_"
            max="9007199254740991"
            min="0"
            name="test-value"
            placeholder="100"
            step="1"
            type="number"
          />
          <svg
            class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_success__vbm0wqa styles_size_small__vbm0wqg styles_undefined_compound_35__vbm0wq1j"
            viewBox="0 0 16 16"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM11.8435 6.20859C12.0967 5.88082 12.0363 5.40981 11.7086 5.15654C11.3808 4.90327 10.9098 4.96365 10.6565 5.29141L6.95615 10.0801L5.30747 8.24828C5.03038 7.94039 4.55616 7.91543 4.24828 8.19253C3.94039 8.46962 3.91544 8.94384 4.19253 9.25172L6.44253 11.7517C6.59132 11.917 6.80582 12.0078 7.02809 11.9995C7.25036 11.9911 7.45746 11.8846 7.59346 11.7086L11.8435 6.20859Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          aria-label="test-unit"
          class="styles__gwf0flg styles__gwf0flf styles__uf6pag0"
          style="--gwf0fl0: 12.6rem;"
        >
          <div
            aria-controls="_r_1o_"
            aria-describedby="_r_1o_"
            class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
            tabindex="-1"
          >
            <div
              class="styles__toi52u0 styles_alignItems_normal_xxsmall__toi52u1 styles_flexDirection_column_xxsmall__toi52u2d styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.25rem_xxsmall__toi52u5d styles_justifyContent_normal_xxsmall__toi52u5v"
            >
              <div
                aria-controls="_r_1o_"
                aria-expanded="false"
                class="selectBar__1ba7knd6 selectBar__1ba7knd5 selectBar_size_large__1ba7knda selectBar_state_neutral__1ba7knde"
                data-disabled="false"
                data-readonly="false"
                data-testid="select-input-test-unit"
                id="unit"
                role="combobox"
                tabindex="0"
              >
                <span
                  class="selectBar__1ba7knd4 style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_weak__m4c9owa style_sentiment_neutral__m4c9owe style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_body__m4c9owo style_undefined_compound_27__m4c9ow23 style_undefined_compound_75__m4c9ow3f"
                >
                  Select item
                </span>
                <div
                  class="selectBar_large__1ba7knd2 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_flexWrap_nowrap_xxsmall__toi52u31 styles_gap_0.5rem_xxsmall__toi52u3p styles_justifyContent_normal_xxsmall__toi52u5v"
                >
                  <svg
                    aria-label="show dropdown"
                    class="styles__vbm0wq0 styles_disabled_false__vbm0wq1 styles_prominence_default__vbm0wq3 styles_sentiment_neutral__vbm0wq9 styles_size_small__vbm0wqg styles_undefined_compound_34__vbm0wq1i"
                    viewBox="0 0 16 16"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                      fill-rule="evenodd"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="style__m4c9ow0 style_disabled_false__m4c9ow1 style_italic_false__m4c9ow3 style_oneLine_false__m4c9ow5 style_prominence_default__m4c9ow7 style_sentiment_success__m4c9owh style_strikeThrough_false__m4c9owk style_underline_false__m4c9owm style_variant_caption__m4c9owu style_undefined_compound_16__m4c9ow1s style_undefined_compound_72__m4c9ow3c"
      />
    </div>
  </div>
</DocumentFragment>
`;
